<resources>
    <string name="app_name">Fragments</string>
    <string name="button2">Button2</string>
    <string name="button1">Start Here</string>
    <string name="screen_2">Screen 2</string>
    <string name="to_list_view">To List View</string>
    <string name="harvest_moon_games">Harvest Moon Games</string>
    <string name="a_new_beginning">A New Beginning</string>
    <string name="magical_melody">Magical Melody</string>
    <string name="a_tale_of_two_towns">A Tale Of Two Towns</string>
    <string name="ds_ds_cute"><![CDATA[DS & DS CUTE]]></string>
    <string name="animal_parade">Animal Parade</string>
    <string name="tree_of_tranquility">Tree of Tranquility</string>
    <string name="hello">HELLO</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="once_a_thriving_town_echo_village_is_almost_empty_after_the_inhabitants_lost_everything_in_a_poor_economy_your_parents_recently_offered_you_a_chance_to_renovate_the_abandoned_family_farm_but_reviving_a_successful_ranch_requires_rebuilding_the_town_can_you_find_the_materials_and_blueprints_that_allow_you_to_create_the_best_community_in_the_land">Once a thriving town, Echo Village is almost empty after the inhabitants lost everything in a poor economy. Your parents recently offered you a chance to renovate the abandoned family farm, but reviving a successful ranch requires rebuilding the town. Can you find the materials and blueprints that allow you to create the best community in the land?</string>
    <string name="todo">TODO</string>
    <string name="hm_img2">hm_img2</string>
    <string name="to_custom_view">To Custom View</string>
    <string name="textview">Text View</string>
    <string name="textview4">TextView</string>
    <string name="newTextView">TextView</string>
    <string name="the_game_begins_with_the_harvest_goddess_a_deity_of_harvest_moon_and_the_witch_princess_fighting_neither_can_win_so_they_part_ways_the_witch_princess_on_meeting_the_harvest_goddess_next_attempts_to_cast_a_spell_to_silence_her_but_instead_petrifies_her_while_trying_to_undo_her_spell_the_witch_princess_inadvertently_sends_the_harvest_goddess_to_another_world_so_she_sends_all_of_the_harvest_sprites_small_elf_like_creatures_to_the_same_world_to_rescue_her_the_witch_princess_then_tells_the_player_to_bring_all_of_the_harvest_sprites_back_in_order_to_rescue_the_harvest_goddess_living_in_the_valley_are_a_number_of_villagers_nine_bachelorettes_and_five_rival_bachelors_the_characters_and_locations_in_harvest_moon_ds_are_the_same_as_those_in_harvest_moon_a_wonderful_life_with_a_few_minor_exceptions">The game begins with the Harvest Goddess, a deity of Harvest Moon, and the Witch Princess fighting. Neither can win, so they part ways. The Witch Princess, on meeting the Harvest Goddess next, attempts to cast a spell to silence her, but instead petrifies her. While trying to undo her spell, the Witch Princess inadvertently sends the Harvest Goddess to another world, so she sends all of the Harvest Sprites (small, elf-like creatures) to the same world to rescue her. The Witch Princess then tells the player to bring all of the Harvest Sprites back in order to rescue the Harvest Goddess. Living in the valley are a number of villagers, nine bachelorettes, and five rival bachelors. The characters and locations in Harvest Moon DS are the same as those in Harvest Moon: A Wonderful Life with a few minor exceptions.</string>
</resources>
